force-app/main/default/objects/sample_leads_dataset_with_channel_india__c/sample_leads_dataset_with_channel_india__c.object-meta.xml
<CustomObject>
    <label>sample_leads_dataset_with_channel_india_</label>
    <nameField>
        <label>sample_leads_dataset_with_channel_india_</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sample_leads_dataset_with_channel_india_</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>