force-app/main/default/objects/sample_leads_dataset_with_channel_india__c/fields/Connect_Channel__c.field-meta.xml
<CustomField>
    <fullName>Connect_Channel__c</fullName>
    <label>Connect Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>