force-app/main/default/objects/sample_leads_dataset_with_channel_india__c/fields/Converted__c.field-meta.xml
<CustomField>
    <fullName>Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>