force-app/main/default/objects/sample_leads_dataset_with_channel_india__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>Lead ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>