force-app/main/default/objects/sample_leads_dataset_with_channel_india__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <label>Lead Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>