force-app/main/default/objects/sample_leads_dataset_with_channel_india__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_ID__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Region__c</columns>
    <columns>Converted__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Connect_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>